# AlphaOnitama

./: .gitignore  AlphaOnitama.md  LICENSE  README.md  pyproject.toml  setup.sh
onitama/: __init__.py  agents.py  cards.py  game.py  gui.py  mcts.py  play.py  test_game.py
